# -------------------------------------------------------------------------------------------------------------------- #
#  PROJECTS                                                                                                            #
# -------------------------------------------------------------------------------------------------------------------- #

# Euklid - Euclidean sequencer --------------------------------------------------------------------------------------- #
add_subdirectory(euklid Euklid)
