# -------------------------------------------------------------------------------------------------------------------- #

                 #################
                 #################
                 ###           ###
                 ###           ###
                 ###           ###
####################           #########################################################################################
####################           ################################################################ www.shaduzlabs.com #####

# -------------------------------------------------------------------------------------------------------------------- #
#  Example projects                                                                                                    #
# -------------------------------------------------------------------------------------------------------------------- #

# Euklid - Euclidean sequencer --------------------------------------------------------------------------------------- #
add_subdirectory(euklid Euklid)
