
        ##########    Copyright (C) 2015 Vincenzo Pacella
        ##      ##    Distributed under MIT license, see file LICENSE
        ##      ##    or <http://opensource.org/licenses/MIT>
        ##      ##
##########      ############################################################# shaduzlabs.com #######

# ------------------------------------------------------------------------------------------------ #
#  Example projects                                                                                #
# ------------------------------------------------------------------------------------------------ #

# Euklid - Euclidean sequencer ------------------------------------------------------------------- #
add_subdirectory(DeviceTest DeviceTest)
add_subdirectory(euklid Euklid)
#add_subdirectory(colordisplay ColorDisplay)
